Added favicon link to the head

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="description" content="A Ability é uma empresa especializada em gestão de pessoas, com foco em coaching executivo e treinamentos para lideranças.">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+
 </head>
 <body>
 	<img class="centered" src="logo.png">
