--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ability Assessoria Empresarial</title>
+	<title>Ability Assessoria Empresarial Ltda.</title>
 	<meta charset="utf-8">
 	<meta name="description" content="A Ability é uma empresa especializada em gestão de pessoas, com foco em coaching executivo e treinamentos para lideranças.">
+	<!-- Compatibility/viewport -->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Keywords-->
+	<meta name="keywords" content="Coaching,coaching de negócios,instrutoria corporativa,coaching executivo,palestras,treinamentos,workshops,sensibilizações,liderança">
+	<!-- CSS/Bootstrap -->
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<!-- Favicon -->
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
-
 </head>
 <body>
 	<img class="centered" src="logo.png">
