--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Ability Assessoria Empresarial Ltda.</title>
 	<meta charset="utf-8">
-	<meta name="description" content="A Ability é uma empresa especializada em gestão de pessoas, com foco em coaching executivo e treinamentos para lideranças.">
+	<meta name="description" content="Empresa especializada em gestão de pessoas com foco em coaching executivo e treinamentos para lideranças. Baseada em Porto Alegre.">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="Josemary Almeida,coaching,coaching de negócios,instrutoria corporativa,coaching executivo,palestras,treinamentos,workshops,sensibilizações,liderança">
