--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<title>Ability Assessoria Empresarial Ltda.</title>
 	<meta charset="utf-8">
 	<meta name="description" content="Empresa especializada em gestão de pessoas com foco em coaching executivo e treinamentos para lideranças. Baseada em Porto Alegre.">
+	<meta name="author" content="Josemary Almeida">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="keywords" content="Josemary Almeida,coaching,coaching de negócios,instrutoria corporativa,coaching executivo,palestras,treinamentos,workshops,sensibilizações,liderança">
+	<meta name="keywords" content="Josemary Almeida,coaching,coaching de negócios,instrutoria corporativa,coaching executivo,palestras,treinamentos,workshops,sensibilizações,liderança,liderança estratégica,SEBRAE,SESI,SENAI,FIERGS,SENAC">
 	<meta name="google-site-verification" content="slbAFzoect7kE4baAjz5wGCXOsc1FjbnfS6DTCOanPc" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
