--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-	<img class="centered" src="logo.png">
+	<img class="centered" src="logo-transparent.png" alt="Logotipo da empresa">
 </body>
 </html>
