Added icons, links

--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="Josemary Almeida,coaching,coaching de negócios,instrutoria corporativa,coaching executivo,palestras,treinamentos,workshops,sensibilizações,liderança,liderança estratégica,SEBRAE,SESI,SENAI,FIERGS,SENAC">
 	<meta name="google-site-verification" content="slbAFzoect7kE4baAjz5wGCXOsc1FjbnfS6DTCOanPc" />
-	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-	<img class="centered" src="logo-transparent.png" alt="Logotipo da empresa">
+
+	<div id="picture">
+	<img id="profile" class="centered" src="logo-transparent.png" alt="Logotipo da empresa">
+	</div>
+
+	<div id="icons">
+     <ul class="list-inline">
+        <li><a href="mailto:ability@ability.pro.br"><i class="fas fa-envelope-square"></i></a></li>
+        <li><a href="https://www.linkedin.com/company/ability-assessoria-empresarial-ltda/"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="https://www.facebook.com/AbilityAssessoriaEmpresarialLtda/"><i class="fab fa-facebook-square"></i></a></li>
+      </ul>
+    </div>
+
 </body>
 </html>
