--- a/www/index.html
+++ b/www/index.html
@@ -118,7 +118,7 @@
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                             <i class="fa fa-bars"></i>
                         </button>
-                        <a class="navbar-brand" href="#brand">
+                        <a class="navbar-brand">
                             <img src="assets/images/logo.png" class="logo" alt="">
                             <!--<img src="assets/images/footer-logo.png" class="logo logo-scrolled" alt="">-->
                         </a>
@@ -151,12 +151,12 @@
                                 <div class="hello_slid">
                                     <div class="slid_item">
                                         <div class="home_text ">
-                                            <h3 class="text-white">Ability Assessoria Empresarial</h3>
+                                            <!--<h3 class="text-white">Ability Assessoria Empresarial</h3>-->
                                             <h1 class="text-white">Melhore seus resultados</h1>
                                             <h3 class="text-white">Nossa missão é inspirar pessoas e empresas</h3>
                                         </div>
                                         <div class="home_btns m-top-10">
-                                            <a href="#contact" class="btn btn-primary m-top-10">Contrate-nos</a>
+                                            <a href="#contact" class="btn btn-primary m-top-10">Contate-nos</a>
                                         </div>
                                     </div>
                                 </div>
@@ -357,10 +357,7 @@
                                         <div class="item_icon"><i class="fa fa-location-arrow"></i></div>
                                         <div class="widget_ab_item_text">
                                             <h6 class="text-white">Localização</h6>
-                                            <p>
-                                                123 suscipit ipsum nam auctor
-                                                mauris dui, ac sollicitudin mauris,
-                                                Bandung</p>
+                                            <p>Porto Alegre – RS – Brasil</p>
                                         </div>
                                     </div>
                                     <div class="widget_ab_item m-top-30">
