--- a/www/index.html
+++ b/www/index.html
@@ -70,7 +70,7 @@
 
 
             <nav class="navbar navbar-default bootsnav navbar-fixed">
-                <div class="navbar-top bg-grey fix">
+                <!--<div class="navbar-top bg-grey fix">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
@@ -91,27 +91,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <!-- Start Top Search -->
-                <div class="top-search">
-                    <div class="container">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                            <input type="text" class="form-control" placeholder="Busca">
-                            <span class="input-group-addon close-search"><i class="fa fa-times"></i></span>
-                        </div>
-                    </div>
-                </div>
-                <!-- End Top Search -->
+                </div>-->
 
 
                 <div class="container"> 
-                    <div class="attr-nav">
-                        <ul>
-                            <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
-                        </ul>
-                    </div> 
 
                     <!-- Start Header Navigation -->
                     <div class="navbar-header">
@@ -134,8 +117,10 @@
                             <li><a href="#test">Clientes</a></li>
                             <li><a href="#contact">Contato</a></li>
                             <li><a href="#contact">Sobre</a></li>
+                            <li><a href="https://www.facebook.com/abilityae"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/ability-assessoria-empresarial-ltda/"><i class="fab fa-linkedin-in"></i></a></li>
                         </ul>
-                    </div><!-- /.navbar-collapse -->
+                    </div>
                 </div> 
 
             </nav>
@@ -397,15 +382,10 @@
 
                 <div class="main_footer fix bg-mega text-center p-top-40 p-bottom-30 m-top-80">
                     <div class="col-md-12">
-                        <!-- 
-                        <p class="wow fadeInRight" data-wow-duration="1s">
-                            Made with 
-                            <i class="fa fa-heart"></i>
-                            by 
-                            <a target="_blank" href="http://bootstrapthemes.co">Bootstrap Themes</a> 
-                            2016. All Rights Reserved
-                        </p>
-                    -->
+                                    <ul class="list-inline">
+                                        <li><a href="https://www.facebook.com/abilityae"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/ability-assessoria-empresarial-ltda/"><i class="fab fa-linkedin-in"></i></a></li>
+                                    </ul>
                     </div>
                 </div>
             </footer>
