Changed section height

--- a/www/index.html
+++ b/www/index.html
@@ -157,7 +157,7 @@
 
 
             <!--Featured Section-->
-            <section id="features" class="features">
+            <section id="features" class="features" style="height: 170px">
                 <div class="container">
                     <div class="row">
                         <div class="main_features fix roomy-70">
