--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,16 @@
         <!--Google Font link-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127324184-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-127324184-1');
+        </script>
+
 
         <link rel="stylesheet" href="assets/css/slick/slick.css"> 
         <link rel="stylesheet" href="assets/css/slick/slick-theme.css">
