--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      <ul class="list-inline">
         <li><a href="mailto:ability@ability.pro.br"><i class="fas fa-envelope-square"></i></a></li>
         <li><a href="https://www.linkedin.com/company/ability-assessoria-empresarial-ltda/"><i class="fab fa-linkedin"></i></a></li>
-        <li><a href="https://www.facebook.com/AbilityAssessoriaEmpresarialLtda/"><i class="fab fa-facebook-square"></i></a></li>
+        <li><a href="https://www.facebook.com/abilityae/"><i class="fab fa-facebook-square"></i></a></li>
       </ul>
     </div>
     </div>
