--- a/www/index.html
+++ b/www/index.html
@@ -171,7 +171,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="main_features fix roomy-70">
-                            <div class="col-md-4">
+                            <!-- <div class="col-md-4">
                                 <div class="features_item sm-m-top-30">
                                     <div class="f_item_icon">
                                         <i class="fas fa-thumbtack"></i>
@@ -181,9 +181,9 @@
                                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque eleifend
                                             in sit amet mattis volutpat rhoncus.</p>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <div class="features_item sm-m-top-30">
                                     <div class="f_item_icon">
                                         <i class="fas fa-thumbtack"></i>
@@ -195,7 +195,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <div class="features_item sm-m-top-30">
                                     <div class="f_item_icon">
                                         <i class="fas fa-thumbtack"></i>
@@ -219,31 +219,30 @@
                 <div class="container">
                     <div class="row">
                         <div class="main_features fix roomy-70">
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <div class="features_item sm-m-top-30">
                                     <div class="f_item_icon">
                                         <i class="fas fa-thumbtack"></i>
                                     </div>
                                     <div class="f_item_text">
-                                        <h3>Workshops</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque eleifend
-                                            in sit amet mattis volutpat rhoncus.</p>
+                                        <h3>Treinamentos comportamentais</h3>
+                                        <p>Palestras, sensibilizações e workshops.
+                                        Temas e carga horária conforme sua necessidade.</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <div class="features_item sm-m-top-30">
                                     <div class="f_item_icon">
                                         <i class="fas fa-thumbtack"></i>
                                     </div>
                                     <div class="f_item_text">
-                                        <h3>Sensibilizações</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque eleifend
-                                            in sit amet mattis volutpat rhoncus.</p>
+                                        <h3>Consultoria</h3>
+                                        <p>Gestão do tempo, mediação de conflitos, administração e planejamento.</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <!-- <div class="col-md-4">
                                 <div class="features_item sm-m-top-30">
                                     <div class="f_item_icon">
                                         <i class="fas fa-thumbtack"></i>
@@ -254,7 +253,7 @@
                                             in sit amet mattis volutpat rhoncus.</p>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div><!-- End off row -->
                 </div><!-- End off container -->
@@ -344,7 +343,7 @@
                         <div class="widget_area">
                             <div class="col-md-6">
                                 <div class="widget_item widget_about">
-                                    <h5 class="text-white">Sobre nós</h5>
+                                    <h5 class="text-white">Sobre</h5>
                                     <p class="m-top-20">Lorem ipsum dolor sit amet consec tetur adipiscing elit 
                                         nulla aliquet pretium nisi in cursus 
                                         maecenas nec eleifen.</p>
