--- a/www/index.html
+++ b/www/index.html
@@ -124,7 +124,8 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="#home">Home</a></li>                    
                             <li><a href="#features">Serviços</a></li>
-                            <li><a href="#test">Clientes</a></li>
+                            <li><a href="#resultados">Resultados</a></li>
+                            <!-- <li><a href="#test">Clientes</a></li> -->
                             <li><a href="#contact">Contato</a></li>
                             <li><a href="#contact">Sobre</a></li>
                             <li><a href="https://www.facebook.com/abilityae"><i class="fab fa-facebook-f"></i></a></li>
@@ -260,9 +261,63 @@
             </section><!-- End off Featured Section-->
 
 
+        <!--Featured Section-->
+            <section id="resultados" class="action bg-primary">
+                <div class="container">
+                    <div class="row">
+                        <div class="main_features fix roomy-70">
+                            <div class="col-md-6">
+                                <div class="features_item sm-m-top-30">
+                                    <div class="f_item_icon">
+                                        <i class="fas fa-hand-holding-heart" style="color: white"></i>
+                                    </div>
+                                    <div class="f_item_text">
+                                        <h3 style="color: white">Resultados para você</h3>
+                                        <ul>
+                                            <li>Foco</li>
+                                            <li>Segurança nas tomadas de decisões</li>
+                                            <li>Equilíbrio vida pessoal <em>x</em> profissional</li>
+                                            <li>Realização pessoal</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="features_item sm-m-top-30">
+                                    <div class="f_item_icon">
+                                        <i class="fas fa-hand-holding-usd" style="color: white"></i>
+                                    </div>
+                                    <div class="f_item_text">
+                                        <h3 style="color: white">Resultados para sua empresa</h3>
+                                        <ul>
+                                            <li>Pessoas mais engajadas e comprometidas</li>
+                                            <li>Melhores níveis de produtividade</li>
+                                            <li>Alinhamento das pessoas com as estratégias da empresa</li>
+                                            <li>Melhora do clima organizacional</li>
+                                            <li>Retorno sobre o investimento (ROI)</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- <div class="col-md-4">
+                                <div class="features_item sm-m-top-30">
+                                    <div class="f_item_icon">
+                                        <i class="fas fa-thumbtack"></i>
+                                    </div>
+                                    <div class="f_item_text">
+                                        <h3>Palestras</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque eleifend
+                                            in sit amet mattis volutpat rhoncus.</p>
+                                    </div>
+                                </div>
+                            </div> -->
+                        </div>
+                    </div><!-- End off row -->
+                </div><!-- End off container -->
+            </section><!-- End off Featured Section-->
 
-            <!--Test section-->
-            <section id="test" class="test bg-grey roomy-60 fix">
+
+           <!--  <section id="test" class="test bg-grey roomy-60 fix">
                 <div class="container">
                     <div class="row">                        
                         <div class="main_test fix">
@@ -312,7 +367,7 @@
                         </div>
                     </div>
                 </div>
-            </section><!-- End off test section -->
+            </section> -->
 
 
            
@@ -325,7 +380,7 @@
                         <div class="maine_action">
                             <div class="col-md-12">
                                 <div class="action_item text-center">
-                                    <h2 class="text-white text-uppercase">Call to action</h2>
+                                    <h2 class="text-white text-uppercase">Fale conosco</h2>
                                 </div>
                             </div>
                         </div>
@@ -344,9 +399,9 @@
                             <div class="col-md-6">
                                 <div class="widget_item widget_about">
                                     <h5 class="text-white">Sobre</h5>
-                                    <p class="m-top-20">Lorem ipsum dolor sit amet consec tetur adipiscing elit 
-                                        nulla aliquet pretium nisi in cursus 
-                                        maecenas nec eleifen.</p>
+                                    <p class="m-top-20">Nossa missão é inspirar pessoas para que obtenham
+                                    melhores resultados, mais produtividade, com foco e qualidade de vida.
+                                    Trabalhamos com gestão de pessoas e negócios há mais de <strong>10 anos</strong>. Realizamos mais de <strong>9,000 horas</strong> de treinamentos em empresas de diversos segmentos.</p>
                                     <div class="widget_ab_item m-top-30">
                                         <div class="item_icon"><i class="fa fa-location-arrow"></i></div>
                                         <div class="widget_ab_item_text">
