--- a/www/index.html
+++ b/www/index.html
@@ -272,7 +272,7 @@
                                         <i class="fas fa-hand-holding-heart" style="color: white"></i>
                                     </div>
                                     <div class="f_item_text">
-                                        <h3 style="color: white">Resultados para você</h3>
+                                        <h3 class="text-white">Resultados para você</h3>
                                         <ul>
                                             <li>Foco</li>
                                             <li>Segurança nas tomadas de decisões</li>
@@ -288,7 +288,7 @@
                                         <i class="fas fa-hand-holding-usd" style="color: white"></i>
                                     </div>
                                     <div class="f_item_text">
-                                        <h3 style="color: white">Resultados para sua empresa</h3>
+                                        <h3 class="text-white">Resultados para sua empresa</h3>
                                         <ul>
                                             <li>Pessoas mais engajadas e comprometidas</li>
                                             <li>Melhores níveis de produtividade</li>
@@ -399,7 +399,7 @@
                             <div class="col-md-6">
                                 <div class="widget_item widget_about">
                                     <h5 class="text-white">Sobre</h5>
-                                    <p class="m-top-20">Nossa missão é inspirar pessoas para que obtenham
+                                    <p class="m-top-20 text-white">Nossa missão é inspirar pessoas para que obtenham
                                     melhores resultados, mais produtividade, com foco e qualidade de vida.
                                     Trabalhamos com gestão de pessoas e negócios há mais de <strong>10 anos</strong>. Realizamos mais de <strong>9,000 horas</strong> de treinamentos em empresas de diversos segmentos.</p>
                                     <div class="widget_ab_item m-top-30">
