added contact-form to assets folder

--- a/www/index.html
+++ b/www/index.html
@@ -191,8 +191,9 @@
                                     </div>
                                     <div class="f_item_text">
                                         <h3>Coaching executivo</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque eleifend
-                                            in sit amet mattis volutpat rhoncus.</p>
+                                        <p>Alta performance para a superação dos desafios da liderança;
+                                        desenvolvimento das competências de líder;
+                                        plano de ação para o alcance de metas.</p>
                                     </div>
                                 </div>
                             </div>
@@ -203,8 +204,8 @@
                                     </div>
                                     <div class="f_item_text">
                                         <h3>Coaching de negócios</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque eleifend
-                                            in sit amet mattis volutpat rhoncus.</p>
+                                        <p>Alta performance para empresários, fortalecendo pontos importantes
+                                        relativos à tomada de decisão e às estratégias do negócio.</p>
                                     </div>
                                 </div>
                             </div>
