Removed contact form

--- a/www/index.html
+++ b/www/index.html
@@ -149,7 +149,7 @@
                                         <div class="home_text ">
                                             <!--<h3 class="text-white">Ability Assessoria Empresarial</h3>-->
                                             <h1 class="text-white">Melhore seus resultados</h1>
-                                            <h3 class="text-white">Nossa missão é inspirar pessoas e empresas</h3>
+                                            <h3 class="text-white">Alta performance para pessoas e empresas</h3>
                                         </div>
                                         <div class="home_btns m-top-10">
                                             <a href="#contact" class="btn btn-primary m-top-10">Contate-nos</a>
@@ -427,7 +427,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-12 col-lg-6" data-form-type="formoid">
+                           <!--  <div class="col-xs-12 col-lg-6" data-form-type="formoid">
 
 
                     <div data-form-alert="true">
@@ -464,7 +464,7 @@
 
                     </form>
                 
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
