Changed font sizes

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                     </div>
                                     <div class="f_item_text">
                                         <h3>Coaching executivo</h3>
-                                        <p>Alta performance para a superação dos desafios da liderança;
+                                        <p style="font-size: 16px">Alta performance para a superação dos desafios da liderança;
                                         desenvolvimento das competências de líder;
                                         plano de ação para o alcance de metas.</p>
                                     </div>
@@ -204,7 +204,7 @@
                                     </div>
                                     <div class="f_item_text">
                                         <h3>Coaching de negócios</h3>
-                                        <p>Alta performance para empresários, fortalecendo pontos importantes
+                                        <p style="font-size: 16px">Alta performance para empresários, fortalecendo pontos importantes
                                         relativos à tomada de decisão e às estratégias do negócio.</p>
                                     </div>
                                 </div>
@@ -228,7 +228,7 @@
                                     </div>
                                     <div class="f_item_text">
                                         <h3>Treinamentos comportamentais</h3>
-                                        <p>Palestras, sensibilizações e workshops.
+                                        <p style="font-size: 16px">Palestras, sensibilizações e workshops.
                                         Temas e carga horária conforme sua necessidade.</p>
                                     </div>
                                 </div>
@@ -240,7 +240,7 @@
                                     </div>
                                     <div class="f_item_text">
                                         <h3>Consultoria</h3>
-                                        <p>Gestão do tempo, mediação de conflitos, administração e planejamento.</p>
+                                        <p style="font-size: 16px">Gestão do tempo, mediação de conflitos, administração e planejamento.</p>
                                     </div>
                                 </div>
                             </div>
@@ -274,7 +274,7 @@
                                     </div>
                                     <div class="f_item_text">
                                         <h3 class="text-white">Resultados para você</h3>
-                                        <ul>
+                                        <ul style="font-size: 16px">
                                             <li>Foco</li>
                                             <li>Segurança nas tomadas de decisões</li>
                                             <li>Equilíbrio vida pessoal <em>x</em> profissional</li>
@@ -290,7 +290,7 @@
                                     </div>
                                     <div class="f_item_text">
                                         <h3 class="text-white">Resultados para sua empresa</h3>
-                                        <ul>
+                                        <ul style="font-size: 16px">
                                             <li>Pessoas mais engajadas e comprometidas</li>
                                             <li>Melhores níveis de produtividade</li>
                                             <li>Alinhamento das pessoas com as estratégias da empresa</li>
@@ -399,29 +399,29 @@
                         <div class="widget_area">
                             <div class="col-md-6">
                                 <div class="widget_item widget_about">
-                                    <h5 class="text-white">Sobre</h5>
-                                    <p class="m-top-20 text-white">Nossa missão é inspirar pessoas para que obtenham
+                                    <h4 class="text-white">Sobre</h4>
+                                    <p class="m-top-20 text-white" <p style="font-size: 16px">Nossa missão é inspirar pessoas para que obtenham
                                     melhores resultados, mais produtividade, com foco e qualidade de vida.
                                     Trabalhamos com gestão de pessoas e negócios há mais de <strong>10 anos</strong>. Realizamos mais de <strong>9,000 horas</strong> de treinamentos em empresas de diversos segmentos.</p>
                                     <div class="widget_ab_item m-top-30">
                                         <div class="item_icon"><i class="fa fa-location-arrow"></i></div>
                                         <div class="widget_ab_item_text">
-                                            <h6 class="text-white">Localização</h6>
-                                            <p>Porto Alegre – RS – Brasil</p>
+                                            <h5 class="text-white">Localização</h5>
+                                            <p style="font-size: 16px">Porto Alegre – RS – Brasil</p>
                                         </div>
                                     </div>
                                     <div class="widget_ab_item m-top-30">
                                         <div class="item_icon"><i class="fa fa-phone"></i></div>
                                         <div class="widget_ab_item_text">
-                                            <h6 class="text-white">Fone</h6>
-                                            <p><a href="tel:55-51-99566-2007">+55 51 99566-2007</a></p>
+                                            <h5 class="text-white">Fone</h5>
+                                            <p style="font-size: 16px"><a href="tel:55-51-99566-2007">+55 51 99566-2007</a></p>
                                         </div>
                                     </div>
                                     <div class="widget_ab_item m-top-30">
                                         <div class="item_icon"><i class="fa fa-envelope"></i></div>
                                         <div class="widget_ab_item_text">
-                                            <h6 class="text-white">Email</h6>
-                                            <p><a href="mailto:ability@ability.pro.br">ability@ability.pro.br</a></p>
+                                            <h5 class="text-white">Email</h5>
+                                            <p style="font-size: 16px"><a href="mailto:ability@ability.pro.br">ability@ability.pro.br</a></p>
                                         </div>
                                     </div>
                                 </div>
