--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <!--Home Sections-->
 
             <section id="home" class="home bg-black fix">
-                <!-- <div class="overlay"></div> -->
+                <div class="overlay"></div>
                 <div class="container">
                     <div class="row">
                         <div class="main_home text-center">
@@ -148,8 +148,8 @@
                                     <div class="slid_item">
                                         <div class="home_text ">
                                             <!--<h3 class="text-white">Ability Assessoria Empresarial</h3>-->
-                                            <h1>Melhore seus resultados</h1>
-                                            <h3>Alta performance para pessoas e empresas</h3>
+                                            <h1 class="text-white">Melhore seus resultados</h1>
+                                            <h3 class="text-white">Alta performance para pessoas e empresas</h3>
                                         </div>
                                         <div class="home_btns m-top-10">
                                             <a href="#contact" class="btn btn-primary m-top-10">Contate-nos</a>
