--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <li><a href="#features">Serviços</a></li>
                             <li><a href="#resultados">Resultados</a></li>
                             <!-- <li><a href="#test">Clientes</a></li> -->
-                            <li><a href="#contact">Contato</a></li>
+                            <!-- <li><a href="#contact">Contato</a></li> -->
                             <li><a href="#contact">Sobre</a></li>
                             <li><a href="https://www.facebook.com/abilityae"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a href="https://www.linkedin.com/company/ability-assessoria-empresarial-ltda/"><i class="fab fa-linkedin-in"></i></a></li>
